--- a/src/styles.css
+++ b/src/styles.css
@@ -32,4 +32,6 @@ body {
     --color-coinly-edit-light: oklch(0.95 0.07 196.05);
     --color-coinly-edit: oklch(0.65 0.17 247.4);
     --color-coinly-edit-dark: oklch(0.5 0.11 239.04);
+
+    --font-quicksand: 'Quicksand', sans-serif;
 }
