--- a/src/app/shared/layout/sidebar.component.html
+++ b/src/app/shared/layout/sidebar.component.html
@@ -1,12 +1,12 @@
-<aside class="fixed top-0 left-0 z-40 w-64 h-screen bg-coinly-secondary border-r border-coinly-highlight pt-20 overflow-y-auto transition-transform -translate-x-full lg:translate-x-0" aria-label="Sidebar">
-    <ul class="space-y-2">
+<aside class="fixed top-0 left-0 z-40 w-64 h-screen bg-coinly-secondary border-r border-coinly-highlight pt-24 overflow-y-auto transition-transform -translate-x-full lg:translate-x-0" aria-label="Sidebar">
+    <ul class="space-y-2 font-quicksand">
         @for (menuItem of sidebarMenu; track menuItem.label) {
             <li>
                 <a
                   [routerLink]="menuItem.routerLink"
-                  routerLinkActive="bg-coinly-primary"
-                  class="flex items-center py-2 px-4 text-coinly-light hover:bg-coinly-primary transition-colors">
-                  <span class="w-5 mr-3 text-coinly-highlight"><i class="{{ menuItem.icon }} mr-3"></i></span>
+                  routerLinkActive="bg-coinly-primary font-bold"
+                  class="flex items-center py-3 px-4 text-coinly-light hover:bg-coinly-primary transition-colors">
+                  <i class="{{ menuItem.icon }} mr-3"></i>
                   <span>{{ menuItem.label }}</span>
                 </a>
             </li>
