--- a/src/app/features/wallets/components/transfer-funds-form/transfer-funds-form.component.html
+++ b/src/app/features/wallets/components/transfer-funds-form/transfer-funds-form.component.html
@@ -9,12 +9,12 @@
   maskStyleClass="backdrop-blur-sm"
   (onShow)="showDialogForm()"
   (onHide)="hideDialogForm()">
-  <form [formGroup]="transferForm" class="space-y-4" (ngSubmit)="onTransfer()">
+  <form [formGroup]="transferForm" class="space-y-2" (ngSubmit)="onTransfer()">
     <div class="flex flex-col p-4 font-bold text-2xl" [style.background-color]="wallet?.color">
       {{ wallet?.name }} ({{ wallet?.type }})
     </div>
 
-    <div class="flex flex-col gap-2">
+    <div class="flex flex-col">
       <label for="destinationWalletId">Transfer to</label>
       <p-select
         id="destinationWalletId"
@@ -31,7 +31,7 @@
     </div>
 
     <div class="grid grid-cols-2 gap-4">
-      <div class="flex flex-col gap-2">
+      <div class="flex flex-col">
         <label for="amount">Amount to transfer <span class="text-coinly-info">(max {{ amountMax | currency }})</span></label>
         <p-input-number
           inputId="amount"
@@ -47,7 +47,7 @@
           <p class="text-red-500">Amount is required</p>
         }
       </div>
-      <div class="flex flex-col gap-2">
+      <div class="flex flex-col">
         <label for="assignedOn">Transfer date</label>
         <p-datepicker
           id="transferedOn"
@@ -56,7 +56,8 @@
           [minDate]="transferedOnMinDate"
           [maxDate]="transferedOnMaxDate"
           [readonlyInput]="true"
-          [showButtonBar]="true" />
+          [showButtonBar]="true"
+          fluid />
         @if (transferForm.get('transferedOn')?.hasError('required') && transferForm.get('transferedOn')?.touched) {
           <p class="text-red-500">Transfer date is required</p>
         }
@@ -90,7 +91,7 @@
         size="small"
         (click)="showDialog = false" />
       <p-button
-        label="Assign"
+        label="Transfer"
         icon="pi pi-save"
         severity="success"
         size="small"
