Add getGroupIcon method to common utils

--- a/src/app/features/methods/pages/methods.component.html
+++ b/src/app/features/methods/pages/methods.component.html
@@ -124,6 +124,7 @@
               title="Set as Default"
               size="small"
               [raised]="true"
+              [disabled]="method.isDeleted"
               (onClick)="onSetDefaultMethod(method)" />
           }
         </div>
